--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,4 +15,8 @@
         android:name="com.hmn.spotifyclonetutorial.ui.SongFragment"
         android:label="fragment_song"
         tools:layout="@layout/fragment_song" />
+    <action
+        android:id="@+id/globalActionToSongFragment"
+        app:destination="@id/songFragment"
+        />
 </navigation>
